--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".GameActivity">
+
+        </activity>
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps2"></activity>
