--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         <activity android:name=".GameActivity">
 
         </activity>
+        <activity android:name=".ScoreboardActivity">
+
+        </activity>
     </application>
 
 </manifest>
